Remove rerun workarounds
We have switched the CDN to a more reliable provider. don't want to
see reruns there anymore.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -402,7 +402,7 @@ jobs:
           done
 
       - name: Run the tests for docker
-        run: python3 -m tox -e ${{ matrix.toxenv }} -- -n 3 --reruns 3 --durations=25 --durations-min=600.0 --pytest-container-log-level=debug
+        run: python3 -m tox -e ${{ matrix.toxenv }} -- -n 3 --durations=25 --durations-min=600.0 --pytest-container-log-level=debug
         env:
           CONTAINER_RUNTIME: docker
           OS_VERSION: ${{ matrix.os_version }}
@@ -411,7 +411,7 @@ jobs:
 
       - name: Run tests as root for podman
         run: |
-          sudo --preserve-env=CONTAINER_RUNTIME,OS_VERSION,TARGET,PULL_ALWAYS -H $(type -p python3) -m tox -e ${{ matrix.toxenv }} -- -n 3 --reruns 3 --durations=25 --durations-min=600.0 --pytest-container-log-level=debug
+          sudo --preserve-env=CONTAINER_RUNTIME,OS_VERSION,TARGET,PULL_ALWAYS -H $(type -p python3) -m tox -e ${{ matrix.toxenv }} -- -n 3 --durations=25 --durations-min=600.0 --pytest-container-log-level=debug
         env:
           CONTAINER_RUNTIME: podman
           OS_VERSION: ${{ matrix.os_version }}
